# ai-consumption-plane

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  SECURITY.md  config.py  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: ci.yml  eval.yml
00_setup/: 01_namespace.sql  02_generate_sample_docs.py
01_pipeline/: bronze.py  event_log_quality.sql  monitoring_alerts.sql  silver_docs.py  silver_orders.py
02_products/: 01_daily_sales_mart.sql  02_customer_features.py  02b_online_feature_store.py  03_vector_index.py  04_sales_metric_view.sql
03_agents/: 01_lookup_function.sql  02_genie_space.md  03_mcp_smoke_test.py  04_grants.sql  05_mcp_client_example.py  06_create_genie_space.py
04_evaluation/: eval_dataset.jsonl  retrieval_eval.py
05_verify_and_cleanup/: delete_document.py  teardown.py  verify.py
lib/: __init__.py  ai_search.py  chunking.py  pii.py  retry.py  secrets.py
tests/: test_chunking.py  test_config.py  test_pii.py  test_retry.py
